ハンドメイドのNN

--- a/DEEP_LEARNING_with_Python.ipynb
+++ b/DEEP_LEARNING_with_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMI1AUE4rpCmIUgDsEbEhYD",
+      "authorship_tag": "ABX9TyNYTRByjzzDoStmK4waQJ+/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,272 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
         "id": "1hRmWPpCSKN2"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import tensorflow as tf"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "DT7PYjAOTLio"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class NaiveDense:\n",
+        "  def __init__(self, input_size, output_size, activation):\n",
+        "    self.activation = activation\n",
+        "\n",
+        "    # (input_size, output_size),初期値が乱数の行列W\n",
+        "    w_shape = (input_size, output_size)\n",
+        "    w_initial_value = tf.random.uniform(w_shape, minval=0, maxval=1e-1)\n",
+        "    self.W = tf.Variable(w_initial_value)\n",
+        "\n",
+        "    # (output_size,),初期値が0のベクトルb\n",
+        "    b_shape = (output_size,)\n",
+        "    b_initial_value = tf.zeros(b_shape)\n",
+        "    self.b = tf.Variable(b_initial_value)\n",
+        "\n",
+        "  def __call__(self, inputs):\n",
+        "    return self.activation(tf.matmul(inputs, self.W) + self.b)\n",
+        "  \n",
+        "  @property\n",
+        "  def weights(self):\n",
+        "    return [self.W, self.b]\n",
+        "\n",
+        "class NaiveSequential:\n",
+        "  def __init__(self, layers):\n",
+        "    self.layers = layers\n",
+        "\n",
+        "  def __call__(self, inputs):\n",
+        "    x = inputs\n",
+        "    for layer in self.layers:\n",
+        "      x = layer(x)\n",
+        "    return x\n",
+        "  \n",
+        "  @property\n",
+        "  def weights(self):\n",
+        "    weights = []\n",
+        "    for layer in self.layers:\n",
+        "      weights += layer.weights\n",
+        "    return weights"
+      ],
+      "metadata": {
+        "id": "cc5QGKoWThyA"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = NaiveSequential([\n",
+        "  NaiveDense(input_size=28*28, output_size=512, activation=tf.nn.relu),\n",
+        "  NaiveDense(input_size=512, output_size=10, activation=tf.nn.softmax)\n",
+        "])\n",
+        "\n",
+        "assert len(model.weights) == 4"
+      ],
+      "metadata": {
+        "id": "Taq59ihDVDgp"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "class BatchGenerator:\n",
+        "  def __init__(self, images, labels, batch_size=128):\n",
+        "    assert len(images) == len(labels)\n",
+        "    self.index = 0\n",
+        "    self.images = images\n",
+        "    self.labels = labels\n",
+        "    self.batch_size = batch_size\n",
+        "    self.num_batches = math.ceil(len(images) / batch_size)\n",
+        "  \n",
+        "  def next(self):\n",
+        "    images = self.images[self.index : self.index + self.batch_size]\n",
+        "    labels = self.labels[self.index : self.index + self.batch_size]\n",
+        "    self.index += self.batch_size\n",
+        "    return images, labels"
+      ],
+      "metadata": {
+        "id": "SNH5EKFhXRbH"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "learning_rate = 1e-3\n",
+        "\n",
+        "def one_training_step(model, images_batch, labels_batch):\n",
+        "  # forward-path\n",
+        "  with tf.GradientTape() as tape:\n",
+        "    predictions = model(images_batch)\n",
+        "    per_sample_losses = tf.keras.losses.sparse_categorical_crossentropy(labels_batch, predictions)\n",
+        "    average_loss = tf.reduce_mean(per_sample_losses)\n",
+        "\n",
+        "    # 勾配のリスト\n",
+        "    # model.weightsの各重みに対応\n",
+        "    gradients = tape.gradient(average_loss, model.weights)\n",
+        "    \n",
+        "    # gradientsを使って重みを更新する\n",
+        "    update_weights(gradients, model.weights)\n",
+        "    return average_loss\n",
+        "\n",
+        "def update_weights(gradients, weights):\n",
+        "  for g, w, in zip(gradients, weights):\n",
+        "    w.assign_sub(g * learning_rate) # -=\n",
+        "\n",
+        "def fit(model, images, labels, epochs, batch_size=128):\n",
+        "  for epoch_counter in range(epochs):\n",
+        "    print(f\"Epoch {epoch_counter}\")\n",
+        "    batch_generator = BatchGenerator(images, labels)\n",
+        "    for batch_counter in range(batch_generator.num_batches):\n",
+        "      images_batch, labels_batch = batch_generator.next()\n",
+        "      loss = one_training_step(model, images_batch, labels_batch)\n",
+        "      if batch_counter % 100 == 0:\n",
+        "        print(f\"loss at batch {batch_counter}: {loss:.2f}\")"
+      ],
+      "metadata": {
+        "id": "QfXGIbl1X7SB"
+      },
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.datasets import mnist\n",
+        "\n",
+        "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()\n",
+        "\n",
+        "train_images = train_images.reshape((60000, 28 * 28))\n",
+        "train_images = train_images.astype(\"float32\") / 255\n",
+        "test_images = test_images.reshape((10000, 28 * 28))\n",
+        "test_images = test_images.astype(\"float32\") / 255\n",
+        "\n",
+        "fit(model, train_images, train_labels, epochs=10, batch_size=128)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E1aZ1UaiaHjm",
+        "outputId": "0b1ee643-4641-4f2f-83f1-e019362ee270"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+            "11490434/11490434 [==============================] - 1s 0us/step\n",
+            "Epoch 0\n",
+            "loss at batch 0: 8.68\n",
+            "loss at batch 100: 2.23\n",
+            "loss at batch 200: 2.22\n",
+            "loss at batch 300: 2.07\n",
+            "loss at batch 400: 2.23\n",
+            "Epoch 1\n",
+            "loss at batch 0: 1.91\n",
+            "loss at batch 100: 1.88\n",
+            "loss at batch 200: 1.84\n",
+            "loss at batch 300: 1.70\n",
+            "loss at batch 400: 1.83\n",
+            "Epoch 2\n",
+            "loss at batch 0: 1.58\n",
+            "loss at batch 100: 1.58\n",
+            "loss at batch 200: 1.51\n",
+            "loss at batch 300: 1.42\n",
+            "loss at batch 400: 1.51\n",
+            "Epoch 3\n",
+            "loss at batch 0: 1.33\n",
+            "loss at batch 100: 1.33\n",
+            "loss at batch 200: 1.24\n",
+            "loss at batch 300: 1.20\n",
+            "loss at batch 400: 1.28\n",
+            "Epoch 4\n",
+            "loss at batch 0: 1.13\n",
+            "loss at batch 100: 1.15\n",
+            "loss at batch 200: 1.04\n",
+            "loss at batch 300: 1.04\n",
+            "loss at batch 400: 1.12\n",
+            "Epoch 5\n",
+            "loss at batch 0: 0.98\n",
+            "loss at batch 100: 1.01\n",
+            "loss at batch 200: 0.90\n",
+            "loss at batch 300: 0.92\n",
+            "loss at batch 400: 0.99\n",
+            "Epoch 6\n",
+            "loss at batch 0: 0.87\n",
+            "loss at batch 100: 0.90\n",
+            "loss at batch 200: 0.79\n",
+            "loss at batch 300: 0.83\n",
+            "loss at batch 400: 0.90\n",
+            "Epoch 7\n",
+            "loss at batch 0: 0.79\n",
+            "loss at batch 100: 0.82\n",
+            "loss at batch 200: 0.71\n",
+            "loss at batch 300: 0.76\n",
+            "loss at batch 400: 0.84\n",
+            "Epoch 8\n",
+            "loss at batch 0: 0.72\n",
+            "loss at batch 100: 0.75\n",
+            "loss at batch 200: 0.65\n",
+            "loss at batch 300: 0.71\n",
+            "loss at batch 400: 0.78\n",
+            "Epoch 9\n",
+            "loss at batch 0: 0.67\n",
+            "loss at batch 100: 0.69\n",
+            "loss at batch 200: 0.60\n",
+            "loss at batch 300: 0.66\n",
+            "loss at batch 400: 0.74\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "predictions = model(test_images)\n",
+        "predictions = predictions.numpy()\n",
+        "predicted_labels = np.argmax(predictions, axis=1)\n",
+        "matches = predicted_labels == test_labels\n",
+        "print(f\"accuracy: {matches.mean():.2f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TZtWJkoya1Pd",
+        "outputId": "6bd57ba6-2f9a-4e12-ec53-96067af2a095"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "accuracy: 0.82\n"
+          ]
+        }
+      ]
     }
   ]
 }
