--- a/DEEP_LEARNING_with_Python.ipynb
+++ b/DEEP_LEARNING_with_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNaNJDV8II8gfdMm+YgQjOr",
+      "authorship_tag": "ABX9TyPEI3zGv5pxwUWa7q6aPqeN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3370,10 +3370,138 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## CV(fine-tuning)"
+      ],
+      "metadata": {
+        "id": "AgcPkOiqL8ag"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conv_base = keras.applications.vgg16.VGG16(weights=\"imagenet\", include_top=False, input_shape=(180, 180, 3))\n",
+        "\n",
+        "data_augmentation = keras.Sequential(\n",
+        "    [\n",
+        "        layers.RandomFlip(\"horizontal\"),\n",
+        "        layers.RandomRotation(0.1),\n",
+        "        layers.RandomZoom(0.2),\n",
+        "    ]\n",
+        ")\n",
+        "\n",
+        "inputs = keras.Input(shape=(180, 180, 3))\n",
+        "\n",
+        "x = data_augmentation(inputs)\n",
+        "\n",
+        "x = keras.applications.vgg16.preprocess_input(x)\n",
+        "x = conv_base(x)\n",
+        "x = layers.Flatten()(x)\n",
+        "x = layers.Dense(256)(x)\n",
+        "x = layers.Dropout(0.5)(x)\n",
+        "outputs = layers.Dense(1, activation=\"sigmoid\")(x)\n",
+        "model = keras.Model(inputs, outputs)\n",
+        "\n",
+        "# 最後から4つめの層までをすべて凍結\n",
+        "conv_base.trainable = True\n",
+        "for layer in conv_base.layers[:-4]:\n",
+        "  layer.trainable = False\n",
+        "\n",
+        "model.compile(loss=\"binary_crossentropy\", optimizer=keras.optimizers.RMSprop(learning_rate=1e-5), metrics=[\"accuracy\"])\n",
+        "callbacks = [\n",
+        "    keras.callbacks.ModelCheckpoint(filepath=\"fine_tuning.keras\", save_best_only=True, monitor=\"val_loss\")\n",
+        "]\n",
+        "history = model.fit(train_dataset, epochs=30, validation_data=validation_dataset, callbacks=callbacks)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w8dU9xVrKiR7",
+        "outputId": "e49ac9fc-1f28-45d5-dcbe-13592c0077cf"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:tensorflow:Using a while_loop for converting RngReadAndSkip cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting Bitcast cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting Bitcast cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting StatelessRandomUniformV2 cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting ImageProjectiveTransformV3 cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting RngReadAndSkip cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting Bitcast cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting Bitcast cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting StatelessRandomUniformV2 cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting ImageProjectiveTransformV3 cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting RngReadAndSkip cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting Bitcast cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting Bitcast cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting StatelessRandomUniformV2 cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting ImageProjectiveTransformV3 cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting RngReadAndSkip cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting Bitcast cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting Bitcast cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting StatelessRandomUniformV2 cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting ImageProjectiveTransformV3 cause there is no registered converter for this op.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/30\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:tensorflow:Using a while_loop for converting RngReadAndSkip cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting Bitcast cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting Bitcast cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting StatelessRandomUniformV2 cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting ImageProjectiveTransformV3 cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting RngReadAndSkip cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting Bitcast cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting Bitcast cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting StatelessRandomUniformV2 cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting ImageProjectiveTransformV3 cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting RngReadAndSkip cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting Bitcast cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting Bitcast cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting StatelessRandomUniformV2 cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting ImageProjectiveTransformV3 cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting RngReadAndSkip cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting Bitcast cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting Bitcast cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting StatelessRandomUniformV2 cause there is no registered converter for this op.\n",
+            "WARNING:tensorflow:Using a while_loop for converting ImageProjectiveTransformV3 cause there is no registered converter for this op.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "63/63 [==============================] - 27s 300ms/step - loss: 3.6935 - accuracy: 0.7535 - val_loss: 0.7236 - val_accuracy: 0.9250\n",
+            "Epoch 2/30\n",
+            "63/63 [==============================] - 19s 293ms/step - loss: 1.1801 - accuracy: 0.8710 - val_loss: 0.5046 - val_accuracy: 0.9550\n",
+            "Epoch 3/30\n",
+            "63/63 [==============================] - 19s 302ms/step - loss: 0.6532 - accuracy: 0.9125 - val_loss: 0.3924 - val_accuracy: 0.9580\n",
+            "Epoch 4/30\n",
+            "63/63 [==============================] - 19s 293ms/step - loss: 0.4206 - accuracy: 0.9330 - val_loss: 0.3276 - val_accuracy: 0.9570\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "w8dU9xVrKiR7"
+        "id": "6jjFFAUcMrHL"
       },
       "execution_count": null,
       "outputs": []
